[FFS-4188] implement initial batching handlers
